# baq

./: .flake8  .gitignore  FILE_FORMAT.md  LICENSE  Makefile  README.md  pyproject.toml  requirements.txt  setup.cfg
.github/workflows/: python-package.yml  python-tests.yml  tests.yml
baq/: __init__.py  __main__.py  age_wrapper.py  backup.py  chunk_adapter.py  decrypt_key_manager.py  encryption.py  main.py  operations.py  restore.py  util.py
baq/backends/: __init__.py  file.py  file_backend.py  helpers.py  s3.py  s3_backend.py
baq/helpers/: encryption.py  metadata_file.py
tests/: conftest.py  test_age_wrapper.py  test_chunk_adapter.py  test_conftest.py  test_e2e.py  test_encryption.py  test_operations.py  test_s3.py  test_smoke.py  test_util.py
tests/backends/: test_file_backend.py  test_s3_backend.py
tests/e2e/: conftest.py  test_e2e_block_device.py  test_e2e_directory.py  test_e2e_single_file.py
tests/e2e/file_backend/: test_e2e_directory_file_backend.py
tests/e2e/s3_backend/: conftest.py  test_e2e_block_device.py  test_e2e_directory.py  test_e2e_single_file.py  test_s3.py
