[project]
name = "baq"
version = "1.0.4"
authors = [
  {name = "Petr Messner", email = "petr.messner@gmail.com"}
]
description = "Backup tool"
license = {file = "LICENSE"}
classifiers = [
  "Programming Language :: Python :: 3",
  "License :: OSI Approved :: MIT License",
]
requires-python = ">=3.9"
dependencies = [
  "cryptography",
  "boto3",
  "zstandard",
]

[project.urls]
"Homepage" = "https://github.com/messa/baq"
"Bug Tracker" = "https://github.com/messa/baq/issues"

[project.scripts]
baq = "baq:baq_main"

[tool.setuptools]
packages = ["baq"]


[build-system]
requires = ["setuptools>=43.0.0", "wheel"]
build-backend = "setuptools.build_meta"
