[metadata]
name = baq
version = 0.0.1
author = Petr Messner
author_email = petr.messner@gmail.com
description = Backup tool
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/messa/baq
project_urls =
    Bug Tracker = https://github.com/messa/baq/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
packages = find:
python_requires = >=3.6
install_requires =
    cryptography

[options.entry_points]
console_scripts =
    baq = baq:baq_main

[options.extras_require]
test =
    pytest
